<resources>
    <string name="app_name">Calculator keyboard</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="button_point">.</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="button_plus">+</string>
    <string name="equals">=</string>
    <string name="clear">c</string>
    <string name="dark_theme">Theme dark</string>
    <string name="light_theme">Theme light</string>
    <string name="orange_theme">Theme orange</string>
    <string name="Settings_main_act">Settings_main_act</string>
    <string name="btn_img_settings">Set</string>
    <string name="img_calc">Img_calc</string>

</resources>