<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/marginStart"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/layout_width_AppCompatImageView"
        android:layout_height="@dimen/layout_height_AppCompatImageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@drawable/keyboard" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/calculator_office" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="1"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@id/button4"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@id/button5"
        app:layout_constraintEnd_toStartOf="@id/button3"
        app:layout_constraintStart_toEndOf="@id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@id/button6"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/clear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="0.9"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="@id/button_plus"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="0.9"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="1"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@id/button7"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button1"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@id/button2"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="1"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button5"
        app:layout_constraintTop_toBottomOf="@id/button3"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="0.9"
        android:text="@string/minus"
        app:layout_constraintBottom_toTopOf="@id/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button6"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="1"
        android:text="@string/_7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button4"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button9"
        app:layout_constraintStart_toEndOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button5"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/_9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button8"
        app:layout_constraintTop_toBottomOf="@id/button6"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="0.9"
        android:text="@string/divide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button9"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@id/button_point"
        app:layout_constraintStart_toStartOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@id/button8"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="1"
        android:background="@drawable/button_shape"
        android:text="@string/equals"
        app:layout_constraintEnd_toEndOf="@id/button_multiply"
        app:layout_constraintStart_toStartOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button0" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="0.9"
        android:text="@string/button_point"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button0"
        app:layout_constraintTop_toBottomOf="@id/button9"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape"
        android:alpha="0.9"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="@id/button_divide"
        app:layout_constraintStart_toEndOf="@id/button_point"
        app:layout_constraintTop_toBottomOf="@id/button_divide"
        tools:ignore="UsingOnClickInXml" />
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/TextView_layout_marginBottom"
        android:alpha="0.8"
        android:background="@color/black"
        android:textAlignment="textEnd"
        android:textSize="@dimen/TextView_textSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/clear"
        app:layout_constraintEnd_toEndOf="@id/clear"
        app:layout_constraintStart_toStartOf="@id/clear" />
    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:alpha="0.87"
        android:layout_marginTop="@dimen/margin_radio_btn_group"
        app:layout_constraintEnd_toEndOf="@id/button8"
        app:layout_constraintStart_toStartOf="@id/button7"
        app:layout_constraintTop_toBottomOf="@id/button_equals">
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_radio_btn"
            android:text="@string/dark_theme"
            android:textStyle="bold|normal"
            android:textSize="@dimen/text_size_radio_btn"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_light_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_radio_btn"
            android:text="@string/light_theme"
            android:textStyle="bold|normal"
            android:textSize="@dimen/text_size_radio_btn"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_orange_theme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_radio_btn"
            android:text="@string/orange_theme"
            android:textStyle="bold|normal"
            android:textSize="@dimen/text_size_radio_btn"
            />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>