<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SettingsActivity"
    >



    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_manage"
        tools:layout_editor_absoluteX="325dp"
        tools:layout_editor_absoluteY="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:layout_constraintHorizontal_bias="0.95"
        android:contentDescription="@string/btn_img_settings" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="707dp"
        android:layout_height="397dp"
        android:contentDescription="@string/img_calc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.63"
        app:srcCompat="@drawable/calculator_office" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.87"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textSize="@dimen/text_size_radio_btn"
            android:textStyle="bold|normal" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            android:textSize="@dimen/text_size_radio_btn"
            android:textStyle="bold|normal" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_btn_orange_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orange_theme"
            android:textSize="@dimen/text_size_radio_btn"
            android:textStyle="bold|normal" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>